--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h4 {
 }
 
 .sitemap1 {
-  float: right;
+  float: left;
   width: 142.5px;
 }
 
